CloudAlpacas-repo/salesforce/main/default/objects/MessageEngagement__c/fields/Bulk_Message__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Message</label>
    <referenceTo>BulkMessage__c</referenceTo>
    <relationshipLabel>Message Engagements</relationshipLabel>
    <relationshipName>Message_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>