CloudAlpacas-repo/salesforce/main/default/objects/MessageEngagement__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact representing the unified individual for this engagement.</description>
    <label>Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Message Engagements</relationshipLabel>
    <relationshipName>Message_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>