CloudAlpacas-repo/salesforce/main/default/objects/MessageEngagement__c/fields/Send_Time_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Send_Time_Phone_Number__c</fullName>
    <label>Send Time Phone Number</label>
    <type>Phone</type>
</CustomField>